--- a/app/src/main/res/layout/fragment_horoscope.xml
+++ b/app/src/main/res/layout/fragment_horoscope.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#333"
     tools:context=".HoroscopeFragment">
 
     <RelativeLayout
@@ -15,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/app_name"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50sp"/>
     </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
