--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,29 +7,49 @@
     android:background="#333"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/calculatorBtn"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:text="@string/Calculator"
-        android:textSize="20sp"
-        android:background="@color/purple_200"
-        android:textColor="#000"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="250sp" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    <Button
-        android:id="@+id/horoscopeBtn"
-        android:layout_width="200dp"
+        android:id="@+id/linearlayoutMainPage"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:textSize="20sp"
-        android:background="@color/purple_200"
-        android:textColor="#000"
-        android:text="@string/Horoscope"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="10dp"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/calculatorBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/purple_200"
+            android:text="@string/Calculator"
+            android:textColor="#000"
+            android:gravity="top"
+            android:layout_margin="2dp"
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/horoscopeBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/purple_200"
+            android:text="@string/Horoscope"
+            android:textColor="#000"
+            android:gravity="top"
+            android:layout_margin="2dp"
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/HomeBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/purple_200"
+            android:text="@string/Home"
+            android:textColor="#000"
+            android:gravity="top"
+            android:layout_margin="2dp"
+            android:textSize="15sp" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/welcomeMsg"
