--- a/app/src/main/res/layout/bottombar.xml
+++ b/app/src/main/res/layout/bottombar.xml
@@ -1,63 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#333"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
 
         android:id="@+id/linearlayoutMainPage"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:orientation="horizontal"
         android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
             android:id="@+id/calculatorBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
-            android:text="@string/Calculator"
-            android:textColor="@color/btntext"
-            android:gravity="top"
             android:layout_margin="2dp"
+            android:background="@color/purple_200"
+            android:gravity="top"
+            android:text="@string/Calculator"
+            android:textColor="#000"
             android:textSize="15sp" />
 
         <Button
             android:id="@+id/horoscopeBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
-            android:text="@string/Horoscope"
-            android:textColor="@color/btntext"
-            android:gravity="top"
             android:layout_margin="2dp"
+            android:background="@color/purple_200"
+            android:gravity="top"
+            android:text="@string/Horoscope"
+            android:textColor="#000"
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/homeBtn"
+            android:id="@+id/HomeBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
-            android:text="@string/Home"
-            android:textColor="@color/btntext"
-            android:gravity="top"
             android:layout_margin="2dp"
+            android:background="@color/purple_200"
+            android:gravity="top"
+            android:text="@string/Home"
+            android:textColor="#000"
             android:textSize="15sp" />
 
     </LinearLayout>
-    <TextView
-        android:id="@+id/welcomeMsg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:text="@string/welcomeMessage"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="150dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
