--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -57,4 +57,47 @@
         android:textAlignment="center"
         android:text="@string/calculatedResult"/>
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+        android:id="@+id/linearlayoutCalPage"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/calculatorBtnC"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/purple_200"
+            android:text="@string/Calculator"
+            android:textColor="@color/btntext"
+            android:gravity="top"
+            android:layout_margin="2dp"
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/horoscopeBtnC"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/purple_200"
+            android:text="@string/Horoscope"
+            android:textColor="@color/btntext"
+            android:gravity="top"
+            android:layout_margin="2dp"
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/homeBtnC"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/purple_200"
+            android:text="@string/Home"
+            android:textColor="@color/btntext"
+            android:gravity="top"
+            android:layout_margin="2dp"
+            android:textSize="15sp" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
