--- a/app/src/main/res/layout/fragment_horoscope.xml
+++ b/app/src/main/res/layout/fragment_horoscope.xml
@@ -25,5 +25,48 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="110dp"
         android:scrollbars="vertical"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+        android:id="@+id/linearlayoutHoroPage"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_gravity="bottom">
+
+        <Button
+            android:id="@+id/calculatorBtnH"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/purple_200"
+            android:text="@string/Calculator"
+            android:textColor="@color/btntext"
+            android:gravity="top"
+            android:layout_margin="2dp"
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/horoscopeBtnH"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/purple_200"
+            android:text="@string/Horoscope"
+            android:textColor="@color/btntext"
+            android:gravity="top"
+            android:layout_margin="2dp"
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/homeBtnH"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/purple_200"
+            android:text="@string/Home"
+            android:textColor="@color/btntext"
+            android:gravity="top"
+            android:layout_margin="2dp"
+            android:textSize="15sp" />
+
+    </LinearLayout>
 
 </FrameLayout>
