--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_horoscopeFragment_to_mainFragment"
             app:destination="@id/mainFragment" />
+        <action
+            android:id="@+id/action_horoscopeFragment_to_calculatorFragment"
+            app:destination="@id/calculatorFragment" />
     </fragment>
     <fragment
         android:id="@+id/calculatorFragment"
@@ -34,5 +37,8 @@
         <action
             android:id="@+id/action_calculatorFragment_to_mainFragment"
             app:destination="@id/mainFragment" />
+        <action
+            android:id="@+id/action_calculatorFragment_to_horoscopeFragment"
+            app:destination="@id/horoscopeFragment" />
     </fragment>
 </navigation>
