--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#333"
+    android:background="@color/bg"
     tools:context=".CalculatorFragment">
 
     <TextView
@@ -12,7 +12,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:background="#313131"
+        android:background="@color/purple_500"
         android:textColor="@color/white"
         android:textAlignment="center"
         android:text="@string/questiondate"
@@ -38,8 +38,11 @@
 
     <Button
         android:id="@+id/dateBtn"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:backgroundTint="#CCCCCC"
+        android:textColor="@color/black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dateText"
@@ -48,9 +51,12 @@
     <TextView
         android:id="@+id/dateResult"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#444"
-        android:textColor="@color/white"
+        android:layout_height="30dp"
+        android:background="@color/teal_700"
+        android:textColor="@color/black"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dateBtn"
@@ -70,10 +76,12 @@
             android:id="@+id/calculatorBtnC"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
+            android:backgroundTint="@color/bgbtn"
             android:text="@string/Calculator"
             android:textColor="@color/btntext"
             android:gravity="top"
+            android:alpha="0.3"
+            android:fontFamily="sans-serif-black"
             android:layout_margin="2dp"
             android:textSize="15sp" />
 
@@ -81,10 +89,11 @@
             android:id="@+id/horoscopeBtnC"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
+            android:backgroundTint="@color/bgbtn"
             android:text="@string/Horoscope"
             android:textColor="@color/btntext"
             android:gravity="top"
+            android:fontFamily="sans-serif-black"
             android:layout_margin="2dp"
             android:textSize="15sp" />
 
@@ -92,10 +101,11 @@
             android:id="@+id/homeBtnC"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
+            android:backgroundTint="@color/bgbtn"
             android:text="@string/Home"
             android:textColor="@color/btntext"
             android:gravity="top"
+            android:fontFamily="sans-serif-black"
             android:layout_margin="2dp"
             android:textSize="15sp" />
 
