--- a/app/src/main/res/layout/fragment_horoscope.xml
+++ b/app/src/main/res/layout/fragment_horoscope.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333"
+    android:background="@color/bg"
     tools:context=".HoroscopeFragment">
 
     <RelativeLayout
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/app_name"
+            android:fontFamily="casual"
             android:textColor="@color/white"
             android:textSize="50sp"/>
     </RelativeLayout>
@@ -25,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="110dp"
         android:scrollbars="vertical"/>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
 
         android:id="@+id/linearlayoutHoroPage"
         android:layout_width="match_parent"
@@ -38,33 +39,37 @@
             android:id="@+id/calculatorBtnH"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
-            android:text="@string/Calculator"
-            android:textColor="@color/btntext"
+            android:backgroundTint="@color/bgbtn"
             android:gravity="top"
+            android:fontFamily="sans-serif-black"
+            android:text="@string/Calculator"
             android:layout_margin="2dp"
+            android:textColor="@color/btntext"
             android:textSize="15sp" />
 
         <Button
             android:id="@+id/horoscopeBtnH"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
+            android:backgroundTint="@color/bgbtn"
+            android:gravity="top"
+            android:fontFamily="sans-serif-black"
+            android:layout_margin="2dp"
+            android:alpha="0.3"
             android:text="@string/Horoscope"
             android:textColor="@color/btntext"
-            android:gravity="top"
-            android:layout_margin="2dp"
             android:textSize="15sp" />
 
         <Button
             android:id="@+id/homeBtnH"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
+            android:backgroundTint="@color/bgbtn"
             android:text="@string/Home"
             android:textColor="@color/btntext"
-            android:gravity="top"
             android:layout_margin="2dp"
+            android:gravity="top"
+            android:fontFamily="sans-serif-black"
             android:textSize="15sp" />
 
     </LinearLayout>
