--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333"
+    android:background="@color/bg"
     tools:context=".MainActivity">
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
 
         android:id="@+id/linearlayoutMainPage"
         android:layout_width="match_parent"
@@ -21,10 +21,11 @@
             android:id="@+id/calculatorBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
+            android:backgroundTint="@color/bgbtn"
             android:text="@string/Calculator"
             android:textColor="@color/btntext"
             android:gravity="top"
+            android:fontFamily="sans-serif-black"
             android:layout_margin="2dp"
             android:textSize="15sp" />
 
@@ -32,10 +33,11 @@
             android:id="@+id/horoscopeBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
+            android:backgroundTint="@color/bgbtn"
             android:text="@string/Horoscope"
             android:textColor="@color/btntext"
             android:gravity="top"
+            android:fontFamily="sans-serif-black"
             android:layout_margin="2dp"
             android:textSize="15sp" />
 
@@ -43,11 +45,13 @@
             android:id="@+id/homeBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
+            android:layout_margin="2dp"
+            android:alpha="0.3"
+            android:backgroundTint="@color/bgbtn"
+            android:fontFamily="sans-serif-black"
+            android:gravity="top"
             android:text="@string/Home"
             android:textColor="@color/btntext"
-            android:gravity="top"
-            android:layout_margin="2dp"
             android:textSize="15sp" />
 
     </LinearLayout>
