--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="btntext">#eeeeee</color>
+    <color name="bgbtn">#313f33</color>
+    <color name="bg">#212121</color>
 </resources>
