--- a/app/src/main/res/layout/fragment_horoscope.xml
+++ b/app/src/main/res/layout/fragment_horoscope.xml
@@ -19,13 +19,22 @@
             android:fontFamily="casual"
             android:textColor="@color/white"
             android:textSize="50sp"/>
+
+
     </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="110dp"
         android:scrollbars="vertical"/>
+    <TextView
+        android:id="@+id/horoscopeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Home"
+        android:textSize="18sp"
+        android:textColor="@color/btntext"/>
     <LinearLayout
 
         android:id="@+id/linearlayoutHoroPage"
