--- a/app/src/main/res/layout/horoscope_list_row.xml
+++ b/app/src/main/res/layout/horoscope_list_row.xml
@@ -15,7 +15,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:background="@color/bgbtn">
+        android:background="@color/bgcard"
+        android:alpha="0.9">
 
     <ImageView
         android:id="@+id/imageView"
