--- a/app/src/main/res/layout/fragment_horoscope.xml
+++ b/app/src/main/res/layout/fragment_horoscope.xml
@@ -27,53 +27,58 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="110dp"
+        android:layout_marginBottom="100dp"
         android:scrollbars="vertical"/>
 
     <LinearLayout
 
         android:id="@+id/linearlayoutHoroPage"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:orientation="horizontal"
+        android:background="@color/bgcard"
         android:gravity="center"
         android:layout_gravity="bottom">
 
         <Button
             android:id="@+id/calculatorBtnH"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:backgroundTint="@color/bgbtn"
-            android:gravity="top"
+            android:gravity="center"
             android:fontFamily="sans-serif-black"
             android:text="@string/Calculator"
             android:layout_margin="2dp"
             android:textColor="@color/btntext"
-            android:textSize="15sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/horoscopeBtnH"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:backgroundTint="@color/bgbtn"
-            android:gravity="top"
+            android:gravity="center"
             android:fontFamily="sans-serif-black"
             android:layout_margin="2dp"
             android:alpha="0.3"
             android:text="@string/Horoscope"
             android:textColor="@color/btntext"
-            android:textSize="15sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/homeBtnH"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:backgroundTint="@color/bgbtn"
             android:text="@string/Home"
             android:textColor="@color/btntext"
             android:layout_margin="2dp"
-            android:gravity="top"
+            android:gravity="center"
             android:fontFamily="sans-serif-black"
-            android:textSize="15sp" />
+            android:textSize="10sp" />
 
     </LinearLayout>
 
