--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,47 +12,52 @@
 
         android:id="@+id/linearlayoutMainPage"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        android:background="@color/bgcard"
         android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
             android:id="@+id/calculatorBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
             android:backgroundTint="@color/bgbtn"
+            android:fontFamily="sans-serif-black"
+            android:gravity="center"
             android:text="@string/Calculator"
             android:textColor="@color/btntext"
-            android:gravity="top"
-            android:fontFamily="sans-serif-black"
-            android:layout_margin="2dp"
-            android:textSize="15sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/horoscopeBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
             android:backgroundTint="@color/bgbtn"
+            android:fontFamily="sans-serif-black"
+            android:gravity="center"
             android:text="@string/Horoscope"
             android:textColor="@color/btntext"
-            android:gravity="top"
-            android:fontFamily="sans-serif-black"
-            android:layout_margin="2dp"
-            android:textSize="15sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/homeBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="2dp"
+            android:layout_weight="1"
             android:alpha="0.3"
             android:backgroundTint="@color/bgbtn"
             android:fontFamily="sans-serif-black"
-            android:gravity="top"
+            android:gravity="center"
             android:text="@string/Home"
             android:textColor="@color/btntext"
-            android:textSize="15sp" />
+            android:textSize="10sp" />
 
     </LinearLayout>
     <TextView
