--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -68,6 +68,7 @@
         android:textColor="@color/white"
         android:text="@string/welcomeMessage"
         app:layout_constraintTop_toTopOf="parent"
+        android:scrollbars="vertical"
         android:layout_marginTop="150dp"/>
 
     <ImageView
